added mirror positioning

--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,7 @@
 <title>Affixed</title>
 <style type="text/css">
 #sticky-menu {
+  width: 100%;
   height: 70px;
   border-bottom: 1px solid #000;
   background-color: #fff;
